# JellyGtk

./: README.md  com.shayanz23.JellyGtk.json  com.shayanz23.JellyGtk.json~  com.shayanz23.JellyPlayer.json  com.shayanz23.JellyPlayer.json~  meson.build
.flatpak-builder/ccache/0/: stats
.flatpak-builder/ccache/1/: stats
.flatpak-builder/ccache/2/: stats
.flatpak-builder/ccache/3/: stats
.flatpak-builder/ccache/4/: stats
.flatpak-builder/ccache/5/: stats
.flatpak-builder/ccache/6/: stats
.flatpak-builder/ccache/7/: stats
.flatpak-builder/ccache/8/: stats
.flatpak-builder/ccache/9/: stats
.flatpak-builder/ccache/a/: stats
.flatpak-builder/ccache/b/: stats
.flatpak-builder/ccache/c/: stats
.flatpak-builder/ccache/d/: stats
.flatpak-builder/ccache/e/: stats
.flatpak-builder/ccache/f/: stats
.flatpak-builder/checksums/: x86_64-com.shayanz23.JellyPlayer.json
data/: com.shayanz23.JellyGtk.appdata.xml.in  com.shayanz23.JellyGtk.desktop.in  com.shayanz23.JellyGtk.gschema.xml  com.shayanz23.JellyPlayer.appdata.xml.in  com.shayanz23.JellyPlayer.desktop.in  com.shayanz23.JellyPlayer.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  jellygtk.gresource.xml  jellyplayer.gresource.xml  main.vala  meson.build  signInWindow.ui  signInWindow.vala  window.ui  window.vala
src/api/: authentication.vala  meson.build
src/api/models/: loginData.vala  meson.build  sessionInfo.vala  user.vala
src/gtk/: meson.build  signInWindow.ui  signInWindow.vala  window.ui  window.vala
(+852 files in other folders)
